error display optimization

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -9,7 +9,11 @@ Option="Options"
 Target="Target"
 Address="URL: "
 AddressCopy="Copy"
-StartFailed="Failed to start output"
 OutputOptions="Output Options: "
 OutputOptionsTip="Tip: Open File->Settings->Output->Streaming to change output options."
+ErrorBeginDataCapture="can't begin data capture"
+ErrorInitEncoders="initialize encoders error"
+ErrorStartRtspServer="starting RTSP server failed on port '%d'"
+ErrorEncode="encode error"
+ErrorUnknown="unknown error"
 
