--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -9,6 +9,10 @@ Option="选项"
 Target="目标"
 Address="URL："
 AddressCopy="复制"
-StartFailed="无法启动输出"
 OutputOptions="输出选项："
 OutputOptionsTip="提示：打开 文件->设置->输出->串流 以更改输出选项。"
+ErrorBeginDataCapture="无法开始数据捕获"
+ErrorInitEncoders="初始化编码器时发生错误"
+ErrorStartRtspServer="在端口“%d”上启动RTSP服务器失败"
+ErrorEncode="编码错误"
+ErrorUnknown="未知错误"
