--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -9,6 +9,10 @@ Reset="重置"
 Target="目標"
 Address="URL："
 AddressCopy="拷貝"
-StartFailed="啟動輸出失敗"
 OutputOptions="輸出選項："
 OutputOptionsTip="提示：打開 檔案->設定->輸出->串流 以更改輸出選項。"
+ErrorBeginDataCapture="無法開始數據捕獲"
+ErrorInitEncoders="初始化編碼器錯誤"
+ErrorStartRtspServer="端口 %d 上啟動RTSP伺服器失敗"
+ErrorEncode="編碼錯誤"
+ErrorUnknown="未知錯誤"
