TODO: Need to update translation. (@brodi1)
Signed-off-by: scottxu <scottxu@scottxublog.com>

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -9,6 +9,10 @@ Option="Optionen"
 Target="Ziel"
 Address="URL: "
 AddressCopy="Kopieren"
-StartFailed="Ausgabe konnte nicht gestartet werden"
 OutputOptions="Ausgabe-Optionen: "
 OutputOptionsTip="Hinweis: Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
+ErrorBeginDataCapture="can't begin data capture"
+ErrorInitEncoders="initialize encoders error"
+ErrorStartRtspServer="starting RTSP server failed on port '%d'"
+ErrorEncode="encode error"
+ErrorUnknown="unknown error"
