Updated german translations

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -11,8 +11,8 @@ Address="URL: "
 AddressCopy="Kopieren"
 OutputOptions="Ausgabe-Optionen: "
 OutputOptionsTip="Hinweis: Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
-ErrorBeginDataCapture="can't begin data capture"
-ErrorInitEncoders="initialize encoders error"
-ErrorStartRtspServer="starting RTSP server failed on port '%d'"
-ErrorEncode="encode error"
-ErrorUnknown="unknown error"
+ErrorBeginDataCapture="Datenerfassung konnte nicht gestartet werden"
+ErrorInitEncoders="Kodierungsinitialisierungsfehler"
+ErrorStartRtspServer="RTSP Server konnte nicht auf Port '%d' gestartet werden"
+ErrorEncode="Kodierungsfehler"
+ErrorUnknown="Unbekannter Fehler"
