Add: Added authentication function.
* Added authentication function.
* Optimized language files.
* The setting interface is optimized.

--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -1,18 +1,32 @@
 RtspServer="RTSP 服务器"
-RstpServerDescription="OBS RTSP 服务器插件"
+RstpServer.Description="OBS RTSP 服务器插件"
+RtspServer.Properties="RTSP 服务器"
+RtspServer.Properties.StartOutput="启动"
+RtspServer.Properties.StopOutput="停止"
+RtspServer.Properties.Options="选项"
+RtspServer.Properties.Options.AutoStart="自动启动"
+RtspServer.Properties.Target="目标"
+RtspServer.Properties.Target.Address="URL："
+RtspServer.Properties.Target.Address.Copy="复制"
+RtspServer.Properties.Options.Output="输出选项："
+RtspServer.Properties.Options.Output.Tip="提示：打开 文件->设置->输出->串流 以更改输出选项。"
+RtspServer.Properties.Authentication="身份认证"
+RtspServer.Properties.Authentication.Enabled="启用"
+RtspServer.Properties.Authentication.Realm="领域："
+RtspServer.Properties.Authentication.Username="用户名："
+RtspServer.Properties.Authentication.Password="密码："
+RtspServer.Properties.Authentication.PasswordPlaceholder="（可选）"
+RtspServer.Properties.Status="状态"
+RtspServer.Properties.Status.TotalDataSent="总数据输出："
+RtspServer.Properties.Status.Bitrate="比特率："
+
 RtspOutput="RTSP 输出"
-StartOutput="启动"
-StopOutput="停止"
-AutoStart="自动启动"
+RtspOutput.Error.BeginDataCapture="无法开始数据捕获"
+RtspOutput.Error.InitEncoders="初始化编码器时发生错误"
+RtspOutput.Error.StartRtspServer="在端口“%d”上启动RTSP服务器失败"
+RtspOutput.Error.Encode="编码错误"
+RtspOutput.Error.Unknown="未知错误"
+RtspOutput.Hotkey.StartOutput="启动输出"
+RtspOutput.Hotkey.StopOutput="停止输出"
+
 Reset="重置"
-Option="选项"
-Target="目标"
-Address="URL："
-AddressCopy="复制"
-OutputOptions="输出选项："
-OutputOptionsTip="提示：打开 文件->设置->输出->串流 以更改输出选项。"
-ErrorBeginDataCapture="无法开始数据捕获"
-ErrorInitEncoders="初始化编码器时发生错误"
-ErrorStartRtspServer="在端口“%d”上启动RTSP服务器失败"
-ErrorEncode="编码错误"
-ErrorUnknown="未知错误"
