TODO: Translation needs to be updated. (@brodi1)

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -1,18 +1,23 @@
 RtspServer="RTSP Server"
-RstpServerDescription="OBS RTSP Server Plugin"
+RstpServer.Description="OBS RTSP Server Plugin"
+RtspServer.Properties="RTSP Server"
+RtspServer.Properties.StartOutput="Starten"
+RtspServer.Properties.StopOutput="Stoppen"
+RtspServer.Properties.Options="Optionen"
+RtspServer.Properties.Options.AutoStart="AutoStart"
+RtspServer.Properties.Target="Ziel"
+RtspServer.Properties.Target.Address="URL: "
+RtspServer.Properties.Target.Address.Copy="Kopieren"
+RtspServer.Properties.Options.Output="Ausgabe-Optionen: "
+RtspServer.Properties.Options.Output.Tip="Hinweis: Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
+
 RtspOutput="RTSP Ausgabe"
-StartOutput="Starten"
-StopOutput="Stoppen"
-AutoStart="AutoStart"
+RtspOutput.Error.BeginDataCapture="Datenerfassung konnte nicht gestartet werden"
+RtspOutput.Error.InitEncoders="Kodierungsinitialisierungsfehler"
+RtspOutput.Error.StartRtspServer="RTSP Server konnte nicht auf Port '%d' gestartet werden"
+RtspOutput.Error.Encode="Kodierungsfehler"
+RtspOutput.Error.Unknown="Unbekannter Fehler"
+RtspOutput.Hotkey.StartOutput="Starten"
+RtspOutput.Hotkey.StopOutput="Stoppen"
+
 Reset="Zurücksetzen"
-Option="Optionen"
-Target="Ziel"
-Address="URL: "
-AddressCopy="Kopieren"
-OutputOptions="Ausgabe-Optionen: "
-OutputOptionsTip="Hinweis: Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
-ErrorBeginDataCapture="Datenerfassung konnte nicht gestartet werden"
-ErrorInitEncoders="Kodierungsinitialisierungsfehler"
-ErrorStartRtspServer="RTSP Server konnte nicht auf Port '%d' gestartet werden"
-ErrorEncode="Kodierungsfehler"
-ErrorUnknown="Unbekannter Fehler"
