--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -1,18 +1,24 @@
 RtspServer="Servidor RTSP"
-RstpServerDescription="Complemento servidor RTSP para OBS"
+RstpServer.Description="Complemento servidor RTSP para OBS"
+RtspServer.Properties="Servidor RTSP"
+RtspServer.Properties.StartOutput="Iniciar"
+RtspServer.Properties.StopOutput="Parar"
+RtspServer.Properties.Options="Opciones"
+RtspServer.Properties.Options.AutoStart="Autoencendido"
+RtspServer.Properties.Target="Objetivo"
+RtspServer.Properties.Target.Address="URL: "
+RtspServer.Properties.Target.Address.Copy="Copiar"
+RtspServer.Properties.Options.Output="Opciones de salida: "
+RtspServer.Properties.Options.Output.Tip="Nota: Si desea cambiar las opciones de salida, abra: Archivo->Configuración->Salida->Emisión."
+
 RtspOutput="Salida RTSP"
-StartOutput="Iniciar"
-StopOutput="Parar"
-AutoStart="Autoencendido"
+RtspOutput.Error.BeginDataCapture="No se pudo iniciar la adquisición de datos"
+RtspOutput.Error.InitEncoders="Error de inicialización de codificación"
+RtspOutput.Error.StartRtspServer="El servidor RTSP no se pudo iniciar en el puerto '%d'"
+RtspOutput.Error.Encode="Error de codificación"
+RtspOutput.Error.Unknown="Error desconocido"
+RtspOutput.Hotkey.StartOutput="Iniciar"
+RtspOutput.Hotkey.StopOutput="Parar"
+
 Reset="Reiniciar"
-Option="Opciones"
-Target="Objetivo"
-Address="URL: "
-AddressCopy="Copiar"
-OutputOptions="Opciones de salida: "
-OutputOptionsTip="Nota: Si desea cambiar las opciones de salida, abra: Archivo->Configuración->Salida->Emisión."
-ErrorBeginDataCapture="No se pudo iniciar la adquisición de datos"
-ErrorInitEncoders="Error de inicialización de codificación"
-ErrorStartRtspServer="El servidor RTSP no se pudo iniciar en el puerto '%d'"
-ErrorEncode="Error de codificación"
-ErrorUnknown="Error desconocido"
+
