--- a/data/locale/nl-NL.ini
+++ b/data/locale/nl-NL.ini
@@ -1,18 +1,23 @@
 RtspServer="RTSP Server"
-RstpServerDescription="OBS RTSP Server Plugin"
+RstpServer.Description="OBS RTSP Server Plugin"
+RtspServer.Properties="RTSP Server"
+RtspServer.Properties.StartOutput="Starten"
+RtspServer.Properties.StopOutput="Stoppen"
+RtspServer.Properties.Options="Opties"
+RtspServer.Properties.Options.AutoStart="AutoStart"
+RtspServer.Properties.Target="Doelwit"
+RtspServer.Properties.Target.Address="URL: "
+RtspServer.Properties.Target.Address.Copy="Kopiëren"
+RtspServer.Properties.Options.Output="Uitvoeropties: "
+RtspServer.Properties.Options.Output.Tip="Opmerking: als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
+
 RtspOutput="RTSP Uitvoer"
-StartOutput="Starten"
-StopOutput="Stoppen"
-AutoStart="AutoStart"
+RtspOutput.Error.BeginDataCapture="Data-acquisitie kan niet worden gestart"
+RtspOutput.Error.InitEncoders="Initialisatiefout (codering)"
+RtspOutput.Error.StartRtspServer="RTSP-server kan niet worden gestart op poort '%d'"
+RtspOutput.Error.Encode="Coderingsfout"
+RtspOutput.Error.Unknown="Onbekende fout"
+RtspOutput.Hotkey.StartOutput="Starten"
+RtspOutput.Hotkey.StopOutput="Stoppen"
+
 Reset="Terugzetten"
-Option="Opties"
-Target="Doelwit"
-Address="URL: "
-AddressCopy="Kopiëren"
-OutputOptions="Uitvoeropties: "
-OutputOptionsTip="Opmerking: als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
-ErrorBeginDataCapture="Data-acquisitie kan niet worden gestart"
-ErrorInitEncoders="Initialisatiefout (codering)"
-ErrorStartRtspServer="RTSP-server kan niet worden gestart op poort '%d'"
-ErrorEncode="Coderingsfout"
-ErrorUnknown="Onbekende fout"
