Update language files.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -9,7 +9,7 @@ RtspServer.Properties.Target="Ziel"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Kopieren"
 RtspServer.Properties.Options.Output="Ausgabe-Optionen: "
-RtspServer.Properties.Options.Output.Tip="Hinweis: Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
+RtspServer.Properties.Options.Output.Tip="Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
 
 RtspOutput="RTSP Ausgabe"
 RtspOutput.Error.BeginDataCapture="Datenerfassung konnte nicht gestartet werden"
