--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -10,7 +10,7 @@ RtspServer.Properties.Target="Target"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Copy"
 RtspServer.Properties.Options.Output="Output Options: "
-RtspServer.Properties.Options.Output.Tip="Tip: Open File->Settings->Output->Streaming to change output options."
+RtspServer.Properties.Options.Output.Tip="Open File->Settings->Output->Streaming to change output options."
 RtspServer.Properties.Authentication="Authentication"
 RtspServer.Properties.Authentication.Enabled="Enabled"
 RtspServer.Properties.Authentication.Realm="Realm: "
