--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -10,7 +10,7 @@ RtspServer.Properties.Target="目标"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="复制"
 RtspServer.Properties.Options.Output="输出选项："
-RtspServer.Properties.Options.Output.Tip="提示：打开 文件->设置->输出->串流 以更改输出选项。"
+RtspServer.Properties.Options.Output.Tip="打开 文件->设置->输出->串流 以更改输出选项。"
 RtspServer.Properties.Authentication="身份认证"
 RtspServer.Properties.Authentication.Enabled="启用"
 RtspServer.Properties.Authentication.Realm="领域："
