--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -10,7 +10,7 @@ RtspServer.Properties.Target="目標"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="拷貝"
 RtspServer.Properties.Options.Output="輸出選項："
-RtspServer.Properties.Options.Output.Tip="提示：打開 檔案->設定->輸出->串流 以更改輸出選項。"
+RtspServer.Properties.Options.Output.Tip="打開 檔案->設定->輸出->串流 以更改輸出選項。"
 RtspServer.Properties.Authentication="身份驗證"
 RtspServer.Properties.Authentication.Enabled="啟用"
 RtspServer.Properties.Authentication.Realm="領域："
