Revert "Multi channel"

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -4,13 +4,12 @@ RtspServer.Properties="RTSP Server"
 RtspServer.Properties.StartOutput="Start"
 RtspServer.Properties.StopOutput="Stop"
 RtspServer.Properties.Options="Options"
-RtspServer.Properties.Options.AutoStart="Auto Start"
-RtspServer.Properties.Options.EnabledAudioTracks="Audio Tracks: "
+RtspServer.Properties.Options.AutoStart="AutoStart"
 RtspServer.Properties.Target="Target"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Copy"
 RtspServer.Properties.Options.Output="Output Options: "
-RtspServer.Properties.Options.Output.Tip="Open File->Settings->Output->Streaming to change output options."
+RtspServer.Properties.Options.Output.Tip="Tip: Open File->Settings->Output->Streaming to change output options."
 RtspServer.Properties.Authentication="Authentication"
 RtspServer.Properties.Authentication.Enabled="Enabled"
 RtspServer.Properties.Authentication.Realm="Realm: "
@@ -29,11 +28,6 @@ RtspOutput.Error.Encode="encode error"
 RtspOutput.Error.Unknown="unknown error"
 RtspOutput.Hotkey.StartOutput="Start Output"
 RtspOutput.Hotkey.StopOutput="Stop Output"
-RtspOutput.Properties.Port="Port"
-RtspOutput.Properties.Authentication="Authentication"
-RtspOutput.Properties.Authentication.Realm="Realm"
-RtspOutput.Properties.Authentication.Username="Username"
-RtspOutput.Properties.Authentication.Password="Password"
 
 Reset="Reset"
 
