--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -9,7 +9,7 @@ RtspServer.Properties.Target="Objetivo"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Copiar"
 RtspServer.Properties.Options.Output="Opciones de salida: "
-RtspServer.Properties.Options.Output.Tip="Si desea cambiar las opciones de salida, abra: Archivo->Configuración->Salida->Emisión."
+RtspServer.Properties.Options.Output.Tip="Nota: Si desea cambiar las opciones de salida, abra: Archivo->Configuración->Salida->Emisión."
 
 RtspOutput="Salida RTSP"
 RtspOutput.Error.BeginDataCapture="No se pudo iniciar la adquisición de datos"
