--- a/data/locale/nl-NL.ini
+++ b/data/locale/nl-NL.ini
@@ -9,7 +9,7 @@ RtspServer.Properties.Target="Doelwit"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Kopiëren"
 RtspServer.Properties.Options.Output="Uitvoeropties: "
-RtspServer.Properties.Options.Output.Tip="als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
+RtspServer.Properties.Options.Output.Tip="Opmerking: als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
 
 RtspOutput="RTSP Uitvoer"
 RtspOutput.Error.BeginDataCapture="Data-acquisitie kan niet worden gestart"
