--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -5,12 +5,11 @@ RtspServer.Properties.StartOutput="启动"
 RtspServer.Properties.StopOutput="停止"
 RtspServer.Properties.Options="选项"
 RtspServer.Properties.Options.AutoStart="自动启动"
-RtspServer.Properties.Options.EnabledAudioTracks="音轨："
 RtspServer.Properties.Target="目标"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="复制"
 RtspServer.Properties.Options.Output="输出选项："
-RtspServer.Properties.Options.Output.Tip="打开 文件->设置->输出->串流 以更改输出选项。"
+RtspServer.Properties.Options.Output.Tip="提示：打开 文件->设置->输出->串流 以更改输出选项。"
 RtspServer.Properties.Authentication="身份认证"
 RtspServer.Properties.Authentication.Enabled="启用"
 RtspServer.Properties.Authentication.Realm="领域："
@@ -29,10 +28,5 @@ RtspOutput.Error.Encode="编码错误"
 RtspOutput.Error.Unknown="未知错误"
 RtspOutput.Hotkey.StartOutput="启动输出"
 RtspOutput.Hotkey.StopOutput="停止输出"
-RtspOutput.Properties.Port="端口"
-RtspOutput.Properties.Authentication="身份认证"
-RtspOutput.Properties.Authentication.Realm="领域"
-RtspOutput.Properties.Authentication.Username="用户名"
-RtspOutput.Properties.Authentication.Password="密码"
 
 Reset="重置"
