--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -5,12 +5,11 @@ RtspServer.Properties.StartOutput="開始"
 RtspServer.Properties.StopOutput="停止"
 RtspServer.Properties.Options="選項"
 RtspServer.Properties.Options.AutoStart="自動開始"
-RtspServer.Properties.Options.EnabledAudioTracks="音軌："
 RtspServer.Properties.Target="目標"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="拷貝"
 RtspServer.Properties.Options.Output="輸出選項："
-RtspServer.Properties.Options.Output.Tip="打開 檔案->設定->輸出->串流 以更改輸出選項。"
+RtspServer.Properties.Options.Output.Tip="提示：打開 檔案->設定->輸出->串流 以更改輸出選項。"
 RtspServer.Properties.Authentication="身份驗證"
 RtspServer.Properties.Authentication.Enabled="啟用"
 RtspServer.Properties.Authentication.Realm="領域："
@@ -24,15 +23,10 @@ RtspServer.Properties.Status.Bitrate="位元速率："
 RtspOutput="RTSP 輸出"
 RtspOutput.Error.BeginDataCapture="無法開始數據捕獲"
 RtspOutput.Error.InitEncoders="初始化編碼器錯誤"
-RtspOutput.Error.StartRtspServer="連接埠 %d 上啟動RTSP伺服器失敗"
+RtspOutput.Error.StartRtspServer="端口 %d 上啟動RTSP伺服器失敗"
 RtspOutput.Error.Encode="編碼錯誤"
 RtspOutput.Error.Unknown="未知錯誤"
 RtspOutput.Hotkey.StartOutput="開始輸出"
 RtspOutput.Hotkey.StopOutput="停止輸出"
-RtspOutput.Properties.Port="連接埠"
-RtspOutput.Properties.Authentication="身份驗證"
-RtspOutput.Properties.Authentication.Realm="領域"
-RtspOutput.Properties.Authentication.Username="用戶名"
-RtspOutput.Properties.Authentication.Password="密碼"
 
 Reset="重置"
