--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -5,11 +5,21 @@ RtspServer.Properties.StartOutput="Starten"
 RtspServer.Properties.StopOutput="Stoppen"
 RtspServer.Properties.Options="Optionen"
 RtspServer.Properties.Options.AutoStart="AutoStart"
+RtspServer.Properties.Options.EnabledAudioTracks="Audiospuren: "
 RtspServer.Properties.Target="Ziel"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Kopieren"
 RtspServer.Properties.Options.Output="Ausgabe-Optionen: "
 RtspServer.Properties.Options.Output.Tip="Wenn Sie die Ausgabe-Optionen ändern wollen öffnen Sie: Datei->Einstellungen->Ausgabe->Streaming."
+RtspServer.Properties.Authentication="Authentifizierung"
+RtspServer.Properties.Authentication.Enabled="Aktiviert"
+RtspServer.Properties.Authentication.Realm="Realm: "
+RtspServer.Properties.Authentication.Username="Benutzername: "
+RtspServer.Properties.Authentication.Password="Passwort: "
+RtspServer.Properties.Authentication.PasswordPlaceholder="(Optional)"
+RtspServer.Properties.Status="Status"
+RtspServer.Properties.Status.TotalDataSent="Gesamtdatenausgabe: "
+RtspServer.Properties.Status.Bitrate="Bitrate: "
 
 RtspOutput="RTSP Ausgabe"
 RtspOutput.Error.BeginDataCapture="Datenerfassung konnte nicht gestartet werden"
@@ -19,5 +29,10 @@ RtspOutput.Error.Encode="Kodierungsfehler"
 RtspOutput.Error.Unknown="Unbekannter Fehler"
 RtspOutput.Hotkey.StartOutput="Starten"
 RtspOutput.Hotkey.StopOutput="Stoppen"
+RtspOutput.Properties.Port="Port"
+RtspOutput.Properties.Authentication="Authentifizierung"
+RtspOutput.Properties.Authentication.Realm="Realm"
+RtspOutput.Properties.Authentication.Username="Benutzername"
+RtspOutput.Properties.Authentication.Password="Passwort"
 
 Reset="Zurücksetzen"
