--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -5,11 +5,21 @@ RtspServer.Properties.StartOutput="Iniciar"
 RtspServer.Properties.StopOutput="Parar"
 RtspServer.Properties.Options="Opciones"
 RtspServer.Properties.Options.AutoStart="Autoencendido"
+RtspServer.Properties.Options.EnabledAudioTracks="Pistas de audio: "
 RtspServer.Properties.Target="Objetivo"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Copiar"
 RtspServer.Properties.Options.Output="Opciones de salida: "
 RtspServer.Properties.Options.Output.Tip="Si desea cambiar las opciones de salida, abra: Archivo->Configuración->Salida->Emisión."
+RtspServer.Properties.Authentication="Autenticación"
+RtspServer.Properties.Authentication.Enabled="Activada"
+RtspServer.Properties.Authentication.Realm="Realm: "
+RtspServer.Properties.Authentication.Username="Nombre de usuario: "
+RtspServer.Properties.Authentication.Password="Contraseña: "
+RtspServer.Properties.Authentication.PasswordPlaceholder="(Opcional)"
+RtspServer.Properties.Status="Estatus"
+RtspServer.Properties.Status.TotalDataSent="Salida de datos total: "
+RtspServer.Properties.Status.Bitrate="Tasa de bits: "
 
 RtspOutput="Salida RTSP"
 RtspOutput.Error.BeginDataCapture="No se pudo iniciar la adquisición de datos"
@@ -19,6 +29,10 @@ RtspOutput.Error.Encode="Error de codificación"
 RtspOutput.Error.Unknown="Error desconocido"
 RtspOutput.Hotkey.StartOutput="Iniciar"
 RtspOutput.Hotkey.StopOutput="Parar"
+RtspOutput.Properties.Port="Puerto de red"
+RtspOutput.Properties.Authentication="Autenticación"
+RtspOutput.Properties.Authentication.Realm="Realm"
+RtspOutput.Properties.Authentication.Username="Nombre de usuario"
+RtspOutput.Properties.Authentication.Password="Contraseña"
 
 Reset="Reiniciar"
-
