--- a/data/locale/nl-NL.ini
+++ b/data/locale/nl-NL.ini
@@ -5,11 +5,21 @@ RtspServer.Properties.StartOutput="Starten"
 RtspServer.Properties.StopOutput="Stoppen"
 RtspServer.Properties.Options="Opties"
 RtspServer.Properties.Options.AutoStart="AutoStart"
+RtspServer.Properties.Options.EnabledAudioTracks="Audiotracks: "
 RtspServer.Properties.Target="Doelwit"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Kopiëren"
 RtspServer.Properties.Options.Output="Uitvoeropties: "
-RtspServer.Properties.Options.Output.Tip="als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
+RtspServer.Properties.Options.Output.Tip="Als u de uitvoeropties wilt wijzigen, opent u: Bestand->Instellingen->Uitvoer->Streamen."
+RtspServer.Properties.Authentication="Authenticatie"
+RtspServer.Properties.Authentication.Enabled="Enabled"
+RtspServer.Properties.Authentication.Realm="Realm: "
+RtspServer.Properties.Authentication.Username="Gebruikersnaam: "
+RtspServer.Properties.Authentication.Password="Wachtwoord: "
+RtspServer.Properties.Authentication.PasswordPlaceholder="(Optioneel)"
+RtspServer.Properties.Status="Toestand"
+RtspServer.Properties.Status.TotalDataSent="Totale gegevensoutput: "
+RtspServer.Properties.Status.Bitrate="Bitsnelheid: "
 
 RtspOutput="RTSP Uitvoer"
 RtspOutput.Error.BeginDataCapture="Data-acquisitie kan niet worden gestart"
@@ -19,5 +29,10 @@ RtspOutput.Error.Encode="Coderingsfout"
 RtspOutput.Error.Unknown="Onbekende fout"
 RtspOutput.Hotkey.StartOutput="Starten"
 RtspOutput.Hotkey.StopOutput="Stoppen"
+RtspOutput.Properties.Port="Poort"
+RtspOutput.Properties.Authentication="Authenticatie"
+RtspOutput.Properties.Authentication.Realm="Realm"
+RtspOutput.Properties.Authentication.Username="Gebruikersnaam"
+RtspOutput.Properties.Authentication.Password="Wachtwoord"
 
 Reset="Terugzetten"
