--- a/data/locale/it-IT.ini
+++ b/data/locale/it-IT.ini
@@ -14,8 +14,8 @@ RtspServer.Properties.Options.Output.Tip="Apri File->Impostazioni->Uscita->Diret
 RtspServer.Properties.Authentication="Autenticazione"
 RtspServer.Properties.Authentication.Enabled="Abilitato"
 RtspServer.Properties.Authentication.Realm="Realm: "
-RtspServer.Properties.Authentication.Username="Username: "
-RtspServer.Properties.Authentication.Password="Password: "
+RtspServer.Properties.Authentication.Username="Nome utente: "
+RtspServer.Properties.Authentication.Password="Parola d'ordine: "
 RtspServer.Properties.Authentication.PasswordPlaceholder="(Opzionale)"
 RtspServer.Properties.Status="Stato"
 RtspServer.Properties.Status.TotalDataSent="Totale Dati in uscita: "
@@ -32,7 +32,7 @@ RtspOutput.Hotkey.StopOutput="Ferma Uscita"
 RtspOutput.Properties.Port="Porta"
 RtspOutput.Properties.Authentication="Autenticazione"
 RtspOutput.Properties.Authentication.Realm="Realm"
-RtspOutput.Properties.Authentication.Username="Username"
-RtspOutput.Properties.Authentication.Password="Password"
+RtspOutput.Properties.Authentication.Username="Nome utente"
+RtspOutput.Properties.Authentication.Password="Parola d'ordine"
 
 Reset="Ripristina"
