--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -8,7 +8,7 @@ RtspServer.Properties.Options.AutoStart="자동 실행"
 RtspServer.Properties.Options.EnabledAudioTracks="오디오 트랙: "
 RtspServer.Properties.Target="표적"
 RtspServer.Properties.Target.Address="URL: "
-RtspServer.Properties.Target.Address.Copy="Copy"
+RtspServer.Properties.Target.Address.Copy="복사"
 RtspServer.Properties.Options.Output="출력 옵션: "
 RtspServer.Properties.Options.Output.Tip="[파일]->[설정]->[출력]->[방송] 을 열어 출력 옵션을 변경합니다."
 RtspServer.Properties.Authentication="인증"
