Update localization files.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Optional)"
 RtspServer.Properties.Status="Status"
 RtspServer.Properties.Status.TotalDataSent="Gesamtdatenausgabe: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP Ausgabe"
 RtspOutput.Error.BeginDataCapture="Datenerfassung konnte nicht gestartet werden"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="Unbekannter Fehler"
 RtspOutput.Hotkey.StartOutput="Starten"
 RtspOutput.Hotkey.StopOutput="Stoppen"
 RtspOutput.Properties.Port="Port"
+RtspOutput.Properties.UrlSuffix="URL-Suffix"
 RtspOutput.Properties.Authentication="Authentifizierung"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Benutzername"
