--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Optional)"
 RtspServer.Properties.Status="Status"
 RtspServer.Properties.Status.TotalDataSent="Total Data Output: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP Output"
 RtspOutput.Error.BeginDataCapture="can't begin data capture"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="unknown error"
 RtspOutput.Hotkey.StartOutput="Start Output"
 RtspOutput.Hotkey.StopOutput="Stop Output"
 RtspOutput.Properties.Port="Port"
+RtspOutput.Properties.UrlSuffix="URL Suffix"
 RtspOutput.Properties.Authentication="Authentication"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Username"
