--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Opcional)"
 RtspServer.Properties.Status="Estatus"
 RtspServer.Properties.Status.TotalDataSent="Salida de datos total: "
 RtspServer.Properties.Status.Bitrate="Tasa de bits: "
+RtspServer.Properties.Version="Versión: "
 
 RtspOutput="Salida RTSP"
 RtspOutput.Error.BeginDataCapture="No se pudo iniciar la adquisición de datos"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="Error desconocido"
 RtspOutput.Hotkey.StartOutput="Iniciar"
 RtspOutput.Hotkey.StopOutput="Parar"
 RtspOutput.Properties.Port="Puerto de red"
+RtspOutput.Properties.UrlSuffix="Sufijo de URL"
 RtspOutput.Properties.Authentication="Autenticación"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Nombre de usuario"
