--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Facultatif)"
 RtspServer.Properties.Status="Statut"
 RtspServer.Properties.Status.TotalDataSent="Sortie totale des données: "
 RtspServer.Properties.Status.Bitrate="Débit binaire: "
+RtspServer.Properties.Version="Version: "
 
 RtspOutput="Sortie RTSP"
 RtspOutput.Error.BeginDataCapture="ne peut pas commencer la capture de données"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="erreur inconnue"
 RtspOutput.Hotkey.StartOutput="Démarrer la sortie"
 RtspOutput.Hotkey.StopOutput="Arrêter la sortie"
 RtspOutput.Properties.Port="Port"
+RtspOutput.Properties.UrlSuffix="Suffixe d'URL"
 RtspOutput.Properties.Authentication="Authentification"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Nom d'utilisateur"
