--- a/data/locale/it-IT.ini
+++ b/data/locale/it-IT.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Opzionale)"
 RtspServer.Properties.Status="Stato"
 RtspServer.Properties.Status.TotalDataSent="Totale Dati in uscita: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Version="Versione: "
 
 RtspOutput="Uscita RTSP"
 RtspOutput.Error.BeginDataCapture="impossibile iniziare l'acquisizione dei dati"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="errore sconosciuto"
 RtspOutput.Hotkey.StartOutput="Avvia Uscita"
 RtspOutput.Hotkey.StopOutput="Ferma Uscita"
 RtspOutput.Properties.Port="Porta"
+RtspOutput.Properties.UrlSuffix="Suffisso URL"
 RtspOutput.Properties.Authentication="Autenticazione"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Nome utente"
