--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(オプショナル)"
 RtspServer.Properties.Status="Status"
 RtspServer.Properties.Status.TotalDataSent="総データ出力: "
 RtspServer.Properties.Status.Bitrate="ビットレート: "
+RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP 出力"
 RtspOutput.Error.BeginDataCapture="データキャプチャを開始できません"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="不明なエラー"
 RtspOutput.Hotkey.StartOutput="出力を開始"
 RtspOutput.Hotkey.StopOutput="出力を停止します"
 RtspOutput.Properties.Port="ポート"
+RtspOutput.Properties.UrlSuffix="URLサフィックス"
 RtspOutput.Properties.Authentication="認証"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="ユーザー名"
