--- a/data/locale/nl-NL.ini
+++ b/data/locale/nl-NL.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Optioneel)"
 RtspServer.Properties.Status="Toestand"
 RtspServer.Properties.Status.TotalDataSent="Totale gegevensoutput: "
 RtspServer.Properties.Status.Bitrate="Bitsnelheid: "
+RtspServer.Properties.Version="Versie: "
 
 RtspOutput="RTSP Uitvoer"
 RtspOutput.Error.BeginDataCapture="Data-acquisitie kan niet worden gestart"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="Onbekende fout"
 RtspOutput.Hotkey.StartOutput="Starten"
 RtspOutput.Hotkey.StopOutput="Stoppen"
 RtspOutput.Properties.Port="Poort"
+RtspOutput.Properties.UrlSuffix="Url-achtervoegsel"
 RtspOutput.Properties.Authentication="Authenticatie"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Gebruikersnaam"
