--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="（可选）"
 RtspServer.Properties.Status="状态"
 RtspServer.Properties.Status.TotalDataSent="总数据输出："
 RtspServer.Properties.Status.Bitrate="比特率："
+RtspServer.Properties.Version="版本："
 
 RtspOutput="RTSP 输出"
 RtspOutput.Error.BeginDataCapture="无法开始数据捕获"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="未知错误"
 RtspOutput.Hotkey.StartOutput="启动输出"
 RtspOutput.Hotkey.StopOutput="停止输出"
 RtspOutput.Properties.Port="端口"
+RtspOutput.Properties.UrlSuffix="URL 后缀"
 RtspOutput.Properties.Authentication="身份认证"
 RtspOutput.Properties.Authentication.Realm="领域"
 RtspOutput.Properties.Authentication.Username="用户名"
