--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="（可選）"
 RtspServer.Properties.Status="狀態"
 RtspServer.Properties.Status.TotalDataSent="總數據輸出："
 RtspServer.Properties.Status.Bitrate="位元速率："
+RtspServer.Properties.Version="版本："
 
 RtspOutput="RTSP 輸出"
 RtspOutput.Error.BeginDataCapture="無法開始數據捕獲"
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="未知錯誤"
 RtspOutput.Hotkey.StartOutput="開始輸出"
 RtspOutput.Hotkey.StopOutput="停止輸出"
 RtspOutput.Properties.Port="連接埠"
+RtspOutput.Properties.UrlSuffix="URL 後綴"
 RtspOutput.Properties.Authentication="身份驗證"
 RtspOutput.Properties.Authentication.Realm="領域"
 RtspOutput.Properties.Authentication.Username="用戶名"
