--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(옵션)"
 RtspServer.Properties.Status="상태"
 RtspServer.Properties.Status.TotalDataSent="총 데이터 출력: "
 RtspServer.Properties.Status.Bitrate="비트 레이트: "
+RtspServer.Properties.Version="버전: "
 
 RtspOutput="RTSP 출력"
 RtspOutput.Error.BeginDataCapture="데이터 캡처를 시작할 수 없습니다."
@@ -30,6 +31,7 @@ RtspOutput.Error.Unknown="알수없는 오류"
 RtspOutput.Hotkey.StartOutput="시작 출력"
 RtspOutput.Hotkey.StopOutput="출력 중지"
 RtspOutput.Properties.Port="포트"
+RtspOutput.Properties.UrlSuffix="URL 접미사"
 RtspOutput.Properties.Authentication="인증"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="사용자 이름"
