--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -7,6 +7,7 @@ RtspServer.Properties.Options="選項"
 RtspServer.Properties.Options.AutoStart="自動開始"
 RtspServer.Properties.Options.EnabledAudioTracks="音軌："
 RtspServer.Properties.Target="目標"
+RtspServer.Properties.Target.Multicast="啟用組播"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="拷貝"
 RtspServer.Properties.Options.Output="輸出選項："
@@ -26,10 +27,12 @@ RtspOutput="RTSP 輸出"
 RtspOutput.Error.BeginDataCapture="無法開始數據捕獲"
 RtspOutput.Error.InitEncoders="初始化編碼器錯誤"
 RtspOutput.Error.StartRtspServer="連接埠 %d 上啟動RTSP伺服器失敗"
+RtspOutput.Error.StartMulticast="組播啟動失敗"
 RtspOutput.Error.Encode="編碼錯誤"
 RtspOutput.Error.Unknown="未知錯誤"
 RtspOutput.Hotkey.StartOutput="開始輸出"
 RtspOutput.Hotkey.StopOutput="停止輸出"
+RtspOutput.Properties.Multicast="啟用組播"
 RtspOutput.Properties.Port="連接埠"
 RtspOutput.Properties.UrlSuffix="URL 後綴"
 RtspOutput.Properties.Authentication="身份驗證"
