--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -7,6 +7,7 @@ RtspServer.Properties.Options="Options"
 RtspServer.Properties.Options.AutoStart="Auto Start"
 RtspServer.Properties.Options.EnabledAudioTracks="Audio Tracks: "
 RtspServer.Properties.Target="Target"
+RtspServer.Properties.Target.Multicast="Enabled Multicast"
 RtspServer.Properties.Target.Address="URL: "
 RtspServer.Properties.Target.Address.Copy="Copy"
 RtspServer.Properties.Options.Output="Output Options: "
@@ -26,10 +27,12 @@ RtspOutput="RTSP Output"
 RtspOutput.Error.BeginDataCapture="can't begin data capture"
 RtspOutput.Error.InitEncoders="initialize encoders error"
 RtspOutput.Error.StartRtspServer="starting RTSP server failed on port '%d'"
+RtspOutput.Error.StartMulticast="starting multicast failed"
 RtspOutput.Error.Encode="encode error"
 RtspOutput.Error.Unknown="unknown error"
 RtspOutput.Hotkey.StartOutput="Start Output"
 RtspOutput.Hotkey.StopOutput="Stop Output"
+RtspOutput.Properties.Multicast="Enabled Multicast"
 RtspOutput.Properties.Port="Port"
 RtspOutput.Properties.UrlSuffix="URL Suffix"
 RtspOutput.Properties.Authentication="Authentication"
