--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -7,6 +7,7 @@ RtspServer.Properties.Options="选项"
 RtspServer.Properties.Options.AutoStart="自动启动"
 RtspServer.Properties.Options.EnabledAudioTracks="音轨："
 RtspServer.Properties.Target="目标"
+RtspServer.Properties.Target.Multicast="启用组播"
 RtspServer.Properties.Target.Address="URL："
 RtspServer.Properties.Target.Address.Copy="复制"
 RtspServer.Properties.Options.Output="输出选项："
@@ -26,10 +27,12 @@ RtspOutput="RTSP 输出"
 RtspOutput.Error.BeginDataCapture="无法开始数据捕获"
 RtspOutput.Error.InitEncoders="初始化编码器时发生错误"
 RtspOutput.Error.StartRtspServer="在端口“%d”上启动RTSP服务器失败"
+RtspOutput.Error.StartMulticast="组播启动失败"
 RtspOutput.Error.Encode="编码错误"
 RtspOutput.Error.Unknown="未知错误"
 RtspOutput.Hotkey.StartOutput="启动输出"
 RtspOutput.Hotkey.StopOutput="停止输出"
+RtspOutput.Properties.Multicast="启用组播"
 RtspOutput.Properties.Port="端口"
 RtspOutput.Properties.UrlSuffix="URL 后缀"
 RtspOutput.Properties.Authentication="身份认证"
