--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,39 +1,42 @@
 RtspServer="RTSPサーバー"
 RstpServer.Description="OBS RTSPサーバープラグイン"
 RtspServer.Properties="RTSPサーバー"
-RtspServer.Properties.StartOutput="スタートする"
-RtspServer.Properties.StopOutput="止まる"
+RtspServer.Properties.StartOutput="出力開始"
+RtspServer.Properties.StopOutput="出力終了"
 RtspServer.Properties.Options="オプション"
 RtspServer.Properties.Options.AutoStart="自動起動"
-RtspServer.Properties.Options.EnabledAudioTracks="オーディオトラック: "
-RtspServer.Properties.Target="目標"
+RtspServer.Properties.Options.EnabledAudioTracks="音声トラック: "
+RtspServer.Properties.Target="サーバー"
+RtspServer.Properties.Target.Multicast="マルチキャストを有効にする"
 RtspServer.Properties.Target.Address="URL: "
-RtspServer.Properties.Target.Address.Copy="コピーする"
+RtspServer.Properties.Target.Address.Copy="コピー"
 RtspServer.Properties.Options.Output="出力オプション: "
 RtspServer.Properties.Options.Output.Tip="出力オプションを変更するには [ファイル]->[設定]->[出力]->[配信] を開きます。"
 RtspServer.Properties.Authentication="認証"
-RtspServer.Properties.Authentication.Enabled="有効"
-RtspServer.Properties.Authentication.Realm="Realm: "
+RtspServer.Properties.Authentication.Enabled="認証を有効にする"
+RtspServer.Properties.Authentication.Realm="レルム: "
 RtspServer.Properties.Authentication.Username="ユーザー名: "
 RtspServer.Properties.Authentication.Password="パスワード: "
-RtspServer.Properties.Authentication.PasswordPlaceholder="(オプショナル)"
-RtspServer.Properties.Status="Status"
-RtspServer.Properties.Status.TotalDataSent="総データ出力: "
+RtspServer.Properties.Authentication.PasswordPlaceholder="(オプション)"
+RtspServer.Properties.Status="統計"
+RtspServer.Properties.Status.TotalDataSent="出力データの合計: "
 RtspServer.Properties.Status.Bitrate="ビットレート: "
 RtspServer.Properties.Version="Version: "
 
-RtspOutput="RTSP 出力"
+RtspOutput="RTSP出力"
 RtspOutput.Error.BeginDataCapture="データキャプチャを開始できません"
-RtspOutput.Error.InitEncoders="エンコーダエラーの初期化"
-RtspOutput.Error.StartRtspServer="ポートでRTSPサーバーの起動に失敗しました '%d'"
+RtspOutput.Error.InitEncoders="エンコーダ初期化エラー"
+RtspOutput.Error.StartRtspServer="ポート%dでのRTSPサーバーの起動に失敗しました"
+RtspOutput.Error.StartMulticast="マルチキャストの開始に失敗しました"
 RtspOutput.Error.Encode="エンコードエラー"
 RtspOutput.Error.Unknown="不明なエラー"
-RtspOutput.Hotkey.StartOutput="出力を開始"
-RtspOutput.Hotkey.StopOutput="出力を停止します"
+RtspOutput.Hotkey.StartOutput="出力開始"
+RtspOutput.Hotkey.StopOutput="出力終了"
 RtspOutput.Properties.Port="ポート"
-RtspOutput.Properties.UrlSuffix="URLサフィックス"
+RtspOutput.Properties.Multicast="マルチキャスト"
+RtspOutput.Properties.UrlSuffix="URLのサフィックス"
 RtspOutput.Properties.Authentication="認証"
-RtspOutput.Properties.Authentication.Realm="Realm"
+RtspOutput.Properties.Authentication.Realm="レルム"
 RtspOutput.Properties.Authentication.Username="ユーザー名"
 RtspOutput.Properties.Authentication.Password="パスワード"
 
