feat(locale): Added translation for "Dropped frames".
Signed-off-by: scottxu <scottxu@scottxublog.com>

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Optional)"
 RtspServer.Properties.Status="Status"
 RtspServer.Properties.Status.TotalDataSent="Gesamtdatenausgabe: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Status.DroppedFrames="Ausgelassene Frames: "
 RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP Ausgabe"
