--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -21,6 +21,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Optional)"
 RtspServer.Properties.Status="Status"
 RtspServer.Properties.Status.TotalDataSent="Total Data Output: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Status.DroppedFrames="Dropped Frames: "
 RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP Output"
