--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Opcional)"
 RtspServer.Properties.Status="Estatus"
 RtspServer.Properties.Status.TotalDataSent="Salida de datos total: "
 RtspServer.Properties.Status.Bitrate="Tasa de bits: "
+RtspServer.Properties.Status.DroppedFrames="Fotogramas perdidos: "
 RtspServer.Properties.Version="Versión: "
 
 RtspOutput="Salida RTSP"
