--- a/data/locale/it-IT.ini
+++ b/data/locale/it-IT.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(Opzionale)"
 RtspServer.Properties.Status="Stato"
 RtspServer.Properties.Status.TotalDataSent="Totale Dati in uscita: "
 RtspServer.Properties.Status.Bitrate="Bitrate: "
+RtspServer.Properties.Status.DroppedFrames="Fotogrammi persi: "
 RtspServer.Properties.Version="Versione: "
 
 RtspOutput="Uscita RTSP"
