--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -20,6 +20,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(옵션)"
 RtspServer.Properties.Status="상태"
 RtspServer.Properties.Status.TotalDataSent="총 데이터 출력: "
 RtspServer.Properties.Status.Bitrate="비트 레이트: "
+RtspServer.Properties.Status.DroppedFrames="손실된 프레임: "
 RtspServer.Properties.Version="버전: "
 
 RtspOutput="RTSP 출력"
