--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -21,6 +21,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="（可选）"
 RtspServer.Properties.Status="状态"
 RtspServer.Properties.Status.TotalDataSent="总数据输出："
 RtspServer.Properties.Status.Bitrate="比特率："
+RtspServer.Properties.Status.DroppedFrames="丢弃的帧："
 RtspServer.Properties.Version="版本："
 
 RtspOutput="RTSP 输出"
