--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -21,6 +21,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="(オプション)"
 RtspServer.Properties.Status="統計"
 RtspServer.Properties.Status.TotalDataSent="出力データの合計: "
 RtspServer.Properties.Status.Bitrate="ビットレート: "
+RtspServer.Properties.Status.DroppedFrames="ドロップしたフレーム: "
 RtspServer.Properties.Version="Version: "
 
 RtspOutput="RTSP出力"
