--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -21,6 +21,7 @@ RtspServer.Properties.Authentication.PasswordPlaceholder="（可選）"
 RtspServer.Properties.Status="狀態"
 RtspServer.Properties.Status.TotalDataSent="總數據輸出："
 RtspServer.Properties.Status.Bitrate="位元速率："
+RtspServer.Properties.Status.DroppedFrames="丟棄的影格："
 RtspServer.Properties.Version="版本："
 
 RtspOutput="RTSP 輸出"
