chore(locale): Added localized text in en-US.ini.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -36,6 +36,7 @@ RtspOutput.Hotkey.StopOutput="Stop Output"
 RtspOutput.Properties.Multicast="Enabled Multicast"
 RtspOutput.Properties.Port="Port"
 RtspOutput.Properties.UrlSuffix="URL Suffix"
+RtspOutput.Properties.OutputAudio="Enable Audio Output"
 RtspOutput.Properties.Authentication="Authentication"
 RtspOutput.Properties.Authentication.Realm="Realm"
 RtspOutput.Properties.Authentication.Username="Username"
